; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/core/extr_dc_link_dp.c_get_training_aux_rd_interval.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/core/extr_dc_link_dp.c_get_training_aux_rd_interval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dc_link = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }
%union.training_aux_rd_interval = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }

@DPCD_REV_12 = common dso_local global i64 0, align 8
@DP_TRAINING_AUX_RD_INTERVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dc_link*, i32)* @get_training_aux_rd_interval to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_training_aux_rd_interval(%struct.dc_link* %0, i32 %1) #0 {
  %3 = alloca %struct.dc_link*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %union.training_aux_rd_interval, align 4
  store %struct.dc_link* %0, %struct.dc_link** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i32 @memset(%union.training_aux_rd_interval* %5, i32 0, i32 4)
  %7 = load %struct.dc_link*, %struct.dc_link** %3, align 8
  %8 = getelementptr inbounds %struct.dc_link, %struct.dc_link* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @DPCD_REV_12, align 8
  %13 = icmp sge i64 %11, %12
  br i1 %13, label %14, label %29

14:                                               ; preds = %2
  %15 = load %struct.dc_link*, %struct.dc_link** %3, align 8
  %16 = load i32, i32* @DP_TRAINING_AUX_RD_INTERVAL, align 4
  %17 = bitcast %union.training_aux_rd_interval* %5 to i32*
  %18 = call i32 @core_link_read_dpcd(%struct.dc_link* %15, i32 %16, i32* %17, i32 4)
  %19 = bitcast %union.training_aux_rd_interval* %5 to %struct.TYPE_6__*
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %14
  %24 = bitcast %union.training_aux_rd_interval* %5 to %struct.TYPE_6__*
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = mul nsw i32 %26, 4000
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %23, %14
  br label %29

29:                                               ; preds = %28, %2
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32 @memset(%union.training_aux_rd_interval*, i32, i32) #1

declare dso_local i32 @core_link_read_dpcd(%struct.dc_link*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
